--- a/新闻首页/新闻首页/Base.lproj/Main.storyboard
+++ b/新闻首页/新闻首页/Base.lproj/Main.storyboard
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6254" systemVersion="14C109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="dcF-Pp-BPH">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7525" systemVersion="14C1514" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="dcF-Pp-BPH">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7516"/>
     </dependencies>
     <scenes>
         <!--Navigation Controller-->
@@ -20,7 +20,7 @@
             </objects>
             <point key="canvasLocation" x="-304" y="313"/>
         </scene>
-        <!--头条新闻-->
+        <!--校园热点-->
         <scene sceneID="ufC-wZ-h7g">
             <objects>
                 <viewController id="vXZ-lx-hvc" customClass="ViewController" sceneMemberID="viewController">
@@ -55,7 +55,7 @@
                             <constraint firstItem="ega-WV-e4f" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leading" id="zcu-bA-ciJ"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" title="头条新闻" id="NXa-h5-GhS"/>
+                    <navigationItem key="navigationItem" title="校园热点" id="NXa-h5-GhS"/>
                     <connections>
                         <outlet property="contentsScrollView" destination="ega-WV-e4f" id="WLg-Hl-yzd"/>
                         <outlet property="titlesScrollView" destination="Prg-YJ-0Cp" id="5fx-KK-hcb"/>
